# tpk-whisper

./: .gitignore  ARCHITECTURE.md  README.md  README.th.md
src/: index.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: local_transcribe.py
src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  paste.rs  ratelimit.rs  transcribe.rs
