[package]
name = "tpk-whisper"
version = "0.1.0"
description = "Minimal MacWhisper-style dictation using Typhoon ASR"
authors = ["Bedrock Analytics"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tpk_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture + WAV encoding
cpal = "0.15"
hound = "3.5"

# HTTP (OpenAI-compatible multipart upload to Typhoon)
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "blocking", "rustls-tls"] }

# Clipboard + synthetic keystrokes (auto-paste at cursor)
arboard = "3"
enigo = "0.2"

# Misc
dirs = "5"
anyhow = "1"

[profile.release]
opt-level = "s"   # optimise for size — keep the binary small
lto = true
codegen-units = 1
panic = "abort"
strip = true
